fix: fix content dark mode

--- a/apps/blog-vite/src/pages/_layout/components/MainContent/style.module.css
+++ b/apps/blog-vite/src/pages/_layout/components/MainContent/style.module.css
@@ -17,6 +17,7 @@
     overflow: auto;
     flex-grow: 1;
     flex-shrink: 1;
+    color: inherit;
   }
 
   .siteFooterWrapper {
